--- a/smartrateapp/src/main/res/values/strings.xml
+++ b/smartrateapp/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="send">Send</string>
     <string name="rate_new">Rate now</string>
     <string name="show_rate">Show Rating Dialog</string>
+
+    <string name="email">technovimalin@gmail.com</string>
 </resources>
