--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Smart Rate App</string>
+    <string name="email">vimalcvs29@gmail.com</string>
 </resources>
