--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Smart Rate App</string>
-    <string name="email">vimalcvs29@gmail.com</string>
+    <string name="app_name">Smart Rate</string>
+    <string name="show_rate">Show Rate</string>
 </resources>
