--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Material Smart Rate</string>
     <string name="show_rate">Show Rate</string>
+    <string name="email">technovimalin@gmail.com</string>
 </resources>
