--- a/material-rating-lib/src/main/res/values/strings.xml
+++ b/material-rating-lib/src/main/res/values/strings.xml
@@ -2,11 +2,10 @@
 <resources>
     <string name="app_name">Smart Rate</string>
     <string name="email">technovimalin@gmail.com</string>
-    <string name="rate_app">Rate us 5 star</string>
-    <string name="rate_app_dis">Support us by give 5 star and write your review</string>
+    <string name="rate_app_dis">Support us by give 5 star\nand write your review</string>
     <string name="rating_dialog_maybe_later">Maybe later</string>
     <string name="write_your_feedback_here">Write your feedback here…</string>
     <string name="feedback">Feedback</string>
-    <string name="send">Send</string>
     <string name="rate_new">Rate now</string>
+    <string name="feedback_send">Send</string>
 </resources>
