--- a/material-rating-lib/src/main/res/values/strings.xml
+++ b/material-rating-lib/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="feedback">Feedback</string>
     <string name="rate_new">Rate now</string>
     <string name="feedback_send">Send</string>
+    <string name="rate_app">Rate App</string>
 </resources>
