--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
-    <string name="app_name">Material Smart Rate</string>
+    <string name="app_name">My Application</string>
     <string name="show_rate">Show Rate</string>
     <string name="rating_app">Rating this app</string>
     <string name="feedback_app">Feedback this app</string>
-
 </resources>
